Setup theme and Home

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,12 @@
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottom_nav_height"
-        android:background="@android:color/black"
-        app:itemTextColor="@color/colorPrimaryDark"
+        android:background="@color/overlay_dark_90"
+        android:foreground="?attr/selectableItemBackground"
+        app:labelVisibilityMode="unlabeled"
+        app:itemTextColor="@drawable/bottom_tab_color"
+        app:itemIconTint="@drawable/bottom_tab_color"
+        app:elevation="@dimen/spacing_large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
