--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/home" android:title="@string/home_tab_string"/>
-    <item android:id="@+id/search" android:title="@string/search_string"/>
-    <item android:id="@+id/my_playlist" android:title="@string/playlist_tab_string"/>
-    <item android:id="@+id/subscription" android:title="@string/subscription_string"/>
+    <item android:id="@+id/home"
+        android:title=""
+        android:icon="@drawable/ic_home"/>
+
+    <item android:id="@+id/search"
+        android:title=""
+        android:icon="@drawable/ic_search"/>
+
+    <item android:id="@+id/my_playlist"
+        android:title=""
+        android:icon="@drawable/ic_playlist"/>
+
+    <item android:id="@+id/subscription"
+        android:title=""
+        android:icon="@drawable/ic_subscription"/>
 
 </menu>
