--- a/app/src/main/res/anim/grow_view.xml
+++ b/app/src/main/res/anim/grow_view.xml
@@ -2,13 +2,18 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <scale
-        android:fromXScale="0.9"
+        android:fromXScale="0.95"
         android:toXScale="1"
-        android:fromYScale="0.9"
+        android:fromYScale="0.95"
         android:toYScale="1"
-        android:duration="800"
+        android:duration="400"
         android:pivotX="50%"
         android:pivotY="50%" >
     </scale>
+
+    <alpha
+        android:fromAlpha="0.9"
+        android:toAlpha="1"
+        android:duration="400"/>
 
 </set>
