--- a/app/src/main/res/anim/shrink_view.xml
+++ b/app/src/main/res/anim/shrink_view.xml
@@ -3,12 +3,17 @@
 
     <scale
         android:fromXScale="1"
-        android:toXScale="0.9"
+        android:toXScale="0.95"
         android:fromYScale="1"
-        android:toYScale="0.9"
-        android:duration="800"
+        android:toYScale="0.95"
+        android:duration="400"
         android:pivotX="50%"
         android:pivotY="50%" >
     </scale>
+
+    <alpha
+        android:fromAlpha="1"
+        android:toAlpha="0.9"
+        android:duration="400"/>
 
 </set>
