--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -61,15 +61,15 @@
                 android:includeFontPadding="false"
                 android:text="@string/one"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_50"
+                android:textSize="@dimen/text_40"
                 android:fontFamily="@font/alata_regular"
-                android:layout_marginStart="@dimen/fab_margin"/>
+                android:layout_marginStart="@dimen/spacing_middle"/>
 
             <TextView
                 android:id="@+id/day_one"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/fab_margin"
+                android:layout_marginStart="@dimen/spacing_middle"
                 android:fontFamily="@font/alata_regular"
                 android:text="@string/day"
                 android:layout_marginBottom="50dp"
@@ -119,15 +119,15 @@
                 android:includeFontPadding="false"
                 android:text="@string/two"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_50"
+                android:textSize="@dimen/text_40"
                 android:fontFamily="@font/alata_regular"
-                android:layout_marginStart="@dimen/fab_margin"/>
+                android:layout_marginStart="@dimen/spacing_middle"/>
 
             <TextView
                 android:id="@+id/day_two"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/fab_margin"
+                android:layout_marginStart="@dimen/spacing_middle"
                 android:fontFamily="@font/alata_regular"
                 android:text="@string/day"
                 android:layout_marginBottom="50dp"
@@ -176,15 +176,15 @@
                 android:includeFontPadding="false"
                 android:text="@string/three"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_50"
+                android:textSize="@dimen/text_40"
                 android:fontFamily="@font/alata_regular"
-                android:layout_marginStart="@dimen/fab_margin"/>
+                android:layout_marginStart="@dimen/spacing_middle"/>
 
             <TextView
                 android:id="@+id/day_three"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/fab_margin"
+                android:layout_marginStart="@dimen/spacing_middle"
                 android:fontFamily="@font/alata_regular"
                 android:text="@string/day"
                 android:layout_marginBottom="50dp"
@@ -235,15 +235,15 @@
                 android:includeFontPadding="false"
                 android:text="@string/four"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_50"
+                android:textSize="@dimen/text_40"
                 android:fontFamily="@font/alata_regular"
-                android:layout_marginStart="@dimen/fab_margin"/>
+                android:layout_marginStart="@dimen/spacing_middle"/>
 
             <TextView
                 android:id="@+id/day_four"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/fab_margin"
+                android:layout_marginStart="@dimen/spacing_middle"
                 android:fontFamily="@font/alata_regular"
                 android:text="@string/day"
                 android:layout_marginBottom="50dp"
@@ -253,6 +253,26 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/upcoming"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/day_four_list"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="@dimen/spacing_mxlarge"
+            android:text="Upcoming Hits"
+            android:textColor="@color/white"
+            android:fontFamily="@font/alata_regular"
+            android:textSize="@dimen/text_heading"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/upcomingHitsRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            app:layout_constraintTop_toBottomOf="@id/upcoming"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="@dimen/spacing_middle"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
