--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -8,13 +8,12 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/itemCardView"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="66dp"
+        android:layout_height="66dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginLeft="@dimen/spacing_medium">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
             android:id="@+id/itemEventImageView"
@@ -28,7 +27,7 @@
         android:id="@+id/itemEventName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="22dp"
+        android:textSize="20dp"
         android:text="Line Up"
         android:ellipsize="end"
         android:textColor="@color/grey_20"
@@ -37,8 +36,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@id/itemEventDate"
-        android:layout_marginLeft="@dimen/spacing_middle"
-        android:layout_marginTop="@dimen/spacing_medium"/>
+        android:layout_marginStart="@dimen/spacing_middle"/>
 
     <TextView
             android:id="@+id/itemEventDate"
@@ -52,20 +50,18 @@
             app:layout_constraintTop_toBottomOf="@id/itemEventName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-        android:layout_marginBottom="@dimen/spacing_medium"
-            android:layout_marginLeft="@dimen/spacing_middle"/>
+            android:layout_marginStart="@dimen/spacing_middle"/>
 
     <ImageView
         android:id="@+id/itemMoreImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/ic_more_vert_black_24dp"
         android:tint="@color/grey_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="@dimen/spacing_middle"
-        android:layout_marginTop="@dimen/spacing_middle"/>
+        android:layout_marginEnd="@dimen/spacing_middle"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
