--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.SplashScreenActivity"
-    android:background="@drawable/gray_gradient">
+    android:background="#000">
 
     <ImageView
         android:layout_width="match_parent"
@@ -24,15 +24,15 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lav_thumbUp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="1"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="voice_recognition.json"
+        app:lottie_fileName="music_fly.json"
         app:lottie_loop="true"
-        app:lottie_speed="0.60" />
+        app:lottie_speed="1.2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
