--- a/app/src/main/res/layout/subscription_fragment.xml
+++ b/app/src/main/res/layout/subscription_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.SubscriptionFragment"
-    android:background="@color/colorPrimaryDark">
+    android:background="#000">
 
 
     <TextView
