--- a/app/src/main/res/layout/subscription_fragment.xml
+++ b/app/src/main/res/layout/subscription_fragment.xml
@@ -9,23 +9,26 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/spacing_mlarge"
         android:id="@+id/subscriptionTextView"
         android:text="Subscription"
         android:textColor="@color/white"
         android:textSize="22dp"
+        android:layout_marginStart="@dimen/spacing_mlarge"
         android:fontFamily="@font/alata_regular"/>
 
     <EditText
         android:id="@+id/subscriptionEditText"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="@dimen/spacing_xxlarge"
         app:layout_constraintTop_toBottomOf="@id/subscriptionTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/subscriptionTextView"
+        app:layout_constraintStart_toStartOf="@id/subscriptionTextView"
         android:textColor="@color/white"
         android:textColorHint="@color/grey_40"
         android:hint="Search for Zeal Information"
@@ -45,7 +48,7 @@
         android:tint="@color/grey_20"
         app:layout_constraintTop_toTopOf="@id/subscriptionEditText"
         app:layout_constraintBottom_toBottomOf="@id/subscriptionEditText"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="@id/subscriptionEditText"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,7 +57,7 @@
         android:text="My Account"
         android:textColor="@color/white"
         android:textSize="22dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/subscriptionEditText"
         app:layout_constraintTop_toBottomOf="@id/subscriptionEditText"
         android:layout_marginTop="@dimen/spacing_middle"
         android:fontFamily="@font/alata_regular"/>
