--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_marginTop="3dp"
     android:layout_marginBottom="3dp"
+    android:focusable="true"
+    android:clickable="true"
     android:layout_height="70dp">
 
     <View
