--- a/app/src/main/res/drawable/gray_gradient.xml
+++ b/app/src/main/res/drawable/gray_gradient.xml
@@ -6,7 +6,8 @@
         android:startColor="@color/gray_darker"
         android:centerColor="@color/grey_dark"
         android:endColor="@color/grey_900"
-        android:angle="90"/>
+        android:gradientRadius="100%"
+        android:type="radial"/>
     <corners
         android:radius="0dp"/>
 
