--- a/app/src/main/res/layout/my_playlist_fragment.xml
+++ b/app/src/main/res/layout/my_playlist_fragment.xml
@@ -7,25 +7,62 @@
     tools:context=".Fragment.MyPlaylistFragment"
     android:background="@color/colorPrimaryDark">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/myPlaylistImage"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:cardCornerRadius="@dimen/spacing_middle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/margin_medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardElevation="@dimen/zero_dimen">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/playlist_image"
+            android:scaleType="centerCrop"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/gray_gradient"
+            android:alpha="0.4"/>
+
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/myPlaylistImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/spacing_mlarge"
-        android:layout_marginStart="@dimen/spacing_mlarge"
         android:id="@+id/playlistTextView"
+        android:textAlignment="center"
         android:text="My Playlist"
         android:textColor="@color/white"
         android:textSize="22dp"
+        android:fontFamily="@font/alata_regular"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/playlistTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/myPlaylistItems"
+        android:textAlignment="center"
+        android:text="11 Items   •   2 Days"
+        android:textColor="@color/white"
+        android:textSize="18dp"
         android:fontFamily="@font/alata_regular"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playlistRecyclerView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/playlistTextView"
+        app:layout_constraintTop_toBottomOf="@id/myPlaylistItems"
         app:layout_constraintStart_toStartOf="@id/playlistTextView"
         app:layout_constraintEnd_toEndOf="@id/playlistTextView"
         android:layout_marginTop="@dimen/spacing_middle"
