--- a/app/src/main/res/layout/my_playlist_fragment.xml
+++ b/app/src/main/res/layout/my_playlist_fragment.xml
@@ -9,8 +9,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/myPlaylistImage"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         app:cardCornerRadius="@dimen/spacing_middle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -54,8 +54,8 @@
         android:id="@+id/myPlaylistItems"
         android:textAlignment="center"
         android:text="11 Items   •   2 Days"
-        android:textColor="@color/white"
-        android:textSize="18dp"
+        android:textColor="@color/overlay_light_70"
+        android:textSize="16dp"
         android:fontFamily="@font/alata_regular"/>
 
     <androidx.recyclerview.widget.RecyclerView
