--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -37,7 +37,7 @@
         android:id="@+id/itemEventName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/alata_regular"
         android:textSize="16dp"
         android:text="Line Up"
         android:ellipsize="end"
@@ -53,7 +53,7 @@
         android:id="@+id/itemEventDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/aaargh"
         android:textSize="12dp"
         android:text="Day 1   •   12:00"
         android:textColor="@color/grey_40"
